<resources>
    <string name="app_name">Crypto Currency Conversion</string>
    <string name="API_ACCESS_KEY">b6b00dedbd443b0aef30b78c93485ff9</string>

    <string name="action_settings">Settings</string>
    <string name="delete_this_card">Delete this card?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="dummy_currency_unit">USD</string>
    <string name="dummy_val">10000000</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="ethereum">Ethereum</string>
    <string name="in_onStartLoading">in onStartLoading</string>
    <string name="in_LoadInBackground">in loadInBackground</string>
    <string name="delete_all_cards">Delete all cards?</string>
    <string name="entries_deleted">Cards deleted</string>
    <string name="cards_deleted">cards deleted.</string>
    <string name="card_deleted">card deleted.</string>
    <string name="cards">cards?</string>
    <string name="get_current_rates">Get Current Rates</string>
    <string name="no_card_to_delete">No card to delete</string>
    <string name="could_not_get_exchange_rate">Couldn\'t get current exchange rates, please check your internet connection</string>
    <string name="current_exchange_rates_fetched_successfully">Current exchange rates fetched successfully</string>
    <string name="you_have_no_currency_selected_yet">You have no currency selected yet</string>
    <string name="tap_to_add_one">Tap + to add one</string>
    <string name="do_ensure_you_have_an_active_internet_connection">Do ensure you have an active internet connection</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="failed_to_load_data_asynchronously">Failed to asynchronously load data.</string>
    <string name="convert">Convert</string>
    <string name="usd">USD</string>
    <string name="btc">BTC</string>
    <string name="ok">OK</string>
    <string name="time_stamp">20/10/2017 at 9:15 PM</string>
    <string name="demo">Demo</string>
</resources>