<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        app:cardElevation="4dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:elevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ivCrypto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    tools:src="@mipmap/btc" />

                <TextView
                    android:id="@+id/tvCryptoVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/ivCrypto"
                    tools:text="2" />

                <TextView
                    android:id="@+id/tvCryptoName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="3dp"
                    android:layout_toEndOf="@+id/tvCryptoVal"
                    tools:text="@string/bitcoin" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvCurrencyValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:textColor="#616161"
                    android:textSize="23sp"
                    android:textStyle="bold"
                    tools:text="@string/dummy_val" />

                <TextView
                    android:id="@+id/tvCurrencyUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:textColor="#616161"
                    android:textSize="23sp"
                    android:textStyle="bold"
                    tools:text="@string/dummy_currency_unit" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvCurrentTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="12sp"
                tools:text="@string/time_stamp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>