<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sania.airliftcasestudy.ui.fragment.ProductListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:shimmer_auto_start="true"
            app:shimmer_duration="800">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <include layout="@layout/layout_loader_shimmer"/>
                <include layout="@layout/layout_loader_shimmer"/>
                <include layout="@layout/layout_loader_shimmer"/>
                <include layout="@layout/layout_loader_shimmer"/>
                <include layout="@layout/layout_loader_shimmer"/>
            </LinearLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>

        <RelativeLayout
            android:id="@+id/layoutEmptyList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:visibility="gone">

            <ImageView
                android:id="@+id/ivCart"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="96dp"
                android:scaleType="centerCrop"
                android:src="@drawable/empty_view_logo" />

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivCart"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/you_have_no_currency_selected_yet"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/tap_to_add_one"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text2"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/do_ensure_you_have_an_active_internet_connection"
                android:textSize="12sp" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvProductList"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:background="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_add_white_24dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>